--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       MOODLE_DATABASE_HOST:     moodle-db
     volumes:
       - moodle_data:/bitnami/moodle
-      - ./assignfeedback_plinq:/bitnami/moodle/mod/assign/feedback/plinq
+      - ./plinq:/bitnami/moodle/mod/assign/feedback/plinq
     networks:
       moodle-network:
         aliases:
@@ -25,6 +25,8 @@ services:
       MARIADB_USER:     bn_moodle
       MARIADB_PASSWORD: bitnami
       MARIADB_DATABASE: bitnami_moodle
+      MARIADB_CHARACTER_SET: utf8mb4
+      MARIADB_COLLATE:       utf8mb4_unicode_ci
     volumes:
       - mariadb_data:/bitnami/mariadb
     networks:
